[workspace]
members = [
  "holo-bfd",
  "holo-bgp",
  "holo-daemon",
  "holo-igmp",
  "holo-interface",
  "holo-isis",
  "holo-keychain",
  "holo-ldp",
  "holo-northbound",
  "holo-ospf",
  "holo-policy",
  "holo-protocol",
  "holo-rip",
  "holo-routing",
  "holo-system",
  "holo-tools",
  "holo-utils",
  "holo-vrrp",
  "holo-yang",
]
exclude = ["fuzz"]
default-members = ["holo-daemon"]
resolver = "2"

[workspace.package]
version = "0.8.0"
authors = ["Renato Westphal <renatowestphal@gmail.com>"]
license = "MIT"
edition = "2024"
repository = "https://github.com/holo-routing/holo"

[workspace.dependencies]
arbitrary = { version = "1.4.1", features = ["derive"] }
arc-swap = "1.7"
base64 = "0.22"
bitflags = { version = "2.9", features = ["serde"] }
bytes = { version = "1.10", features = ["serde"] }
capctl = "0.2"
check_keyword = "0.4"
clap = "2.33"
chrono = { version = "0.4", features = ["serde"] }
const-addrs = { version = "0.1", features = ["ipnet"] }
convert_case = "0.8"
criterion = "0.4"
crossbeam-channel = "0.5"
derive-new = "0.7"
enum-as-inner = "0.6"
fletcher = "1.0"
futures = "0.3"
generational-arena = "0.2"
hmac = "0.12"
internet-checksum = "0.2"
ipnetwork = "0.20"
itertools = "0.14"
libc = "0.2"
maplit = "1.0"
md-5 = "0.10"
nix = { version = "0.30", features = ["fs", "net", "socket", "uio", "user"] }
netlink-packet-core = "0.7"
netlink-packet-route = "0.24"
netlink-sys = "0.8"
num-derive = "0.4"
num-traits = "0.2"
pickledb = "0.5"
prefix-trie = { version = "0.8", default-features = false, features = ["ipnetwork"]  }
prost = "0.13"
rand = { version = "0.9", features = ["thread_rng"] }
regex = "1.11"
rtnetlink = "0.17"
rustc_tools_util = "0.4.2"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde_with = "3.14"
sha1 = "0.10"
sha2 = "0.10"
similar = "2.7"
smallvec = { version = "1.15", features = ["serde"] }
socket2 = { version = "0.5", features = ["all"] }
sysctl = "0.6"
tokio = { version = "1.46", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tonic = { version = "0.13", features = ["tls-ring"] }
tonic-build = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
yang3 = { version = "0.18" }

[workspace.metadata.spellcheck]
config = "spellcheck.toml"

[workspace.lints.rust]
rust_2018_idioms = { level = "warn", priority = -1 }
unsafe_code = "forbid"

[workspace.lints.clippy]
borrowed_box = "allow"
field_reassign_with_default = "allow"
large_enum_variant = "allow"
manual_range_contains = "allow"
single_match = "allow"
too_many_arguments = "allow"

[profile.release]
lto = true		# Enable link-time optimization for improved runtime performance
codegen-units = 1	# Set the number of codegen units to 1 to increase optimization opportunities

[profile.small]
inherits = "release"	# Inherit settings from the release profile
opt-level = "z"		# Optimize for small binary size
strip = true		# Strip symbols to further reduce binary size
