[package]
name = "holo-daemon"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
console-subscriber = "0.3"
prost-types = "0.12"
toml = "0.5"
tokio-uring = { version = "0.5", optional = true }
tokio-stream = "0.1"
tracing-appender = "0.2"
tracing-journald = "0.3"

capctl.workspace = true
chrono.workspace = true
clap.workspace = true
derive-new.workspace = true
futures.workspace = true
itertools.workspace = true
nix.workspace = true
pickledb.workspace = true
prost.workspace = true
serde.workspace = true
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
yang2.workspace = true

holo-interface = { path = "../holo-interface", optional = true  }
holo-bfd = { path = "../holo-bfd", optional = true }
holo-bgp = { path = "../holo-bgp", optional = true }
holo-keychain = { path = "../holo-keychain", optional = true }
holo-ldp = { path = "../holo-ldp", optional = true }
holo-northbound = { path = "../holo-northbound" }
holo-ospf = { path = "../holo-ospf", optional = true }
holo-policy = { path = "../holo-policy", optional = true }
holo-protocol = { path = "../holo-protocol" }
holo-rip = { path = "../holo-rip", optional = true }
holo-routing = { path = "../holo-routing", optional = true  }
holo-utils = { path = "../holo-utils" }
holo-yang = { path = "../holo-yang" }

[build-dependencies]
tonic-build.workspace = true

[lints]
workspace = true

[[bin]]
name = "holod"
path = "src/main.rs"

[features]
default = [
  # Base components
  "interface",
  "keychain",
  "policy",
  "routing",
  # Protocols
  "bfd",
  "bgp",
  "ldp",
  "ospf",
  "rip",
]

# Base components
interface = ["dep:holo-interface"]
keychain = ["dep:holo-keychain"]
policy = ["dep:holo-policy", "dep:holo-routing"]
routing = ["dep:holo-routing", "dep:holo-interface"]

# Protocols
bfd = ["dep:holo-bfd", "holo-routing/bfd"]
bgp = ["dep:holo-bgp", "holo-routing/bgp"]
ldp = ["dep:holo-ldp", "holo-routing/ldp"]
ospf = ["dep:holo-ospf", "holo-routing/ospf"]
rip = ["dep:holo-rip", "holo-routing/rip"]

# Other features
io_uring = ["dep:tokio-uring"]
