[package]
name = "holo-fuzz"
version.workspace = true
authors = ["Paul Wekesa <paul1tw1@gmail.com>"]
license.workspace = true
edition.workspace = true

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys.workspace = true
yang3.workspace = true

# custom
pkg-config = "0.3.27"

holo-vrrp = { path = "../holo-vrrp/" }
holo-northbound = { path = "../holo-northbound" }
holo-protocol = { path = "../holo-protocol" }
holo-utils = { path = "../holo-utils" }
holo-yang = { path = "../holo-yang" }

[[bin]]
name = "vrrp"
path = "fuzz_targets/vrrp.rs"
test = false
doc = false
bench = false
