[package]
name = "holo-interface"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
bitflags.workspace = true
capctl.workspace = true
derive-new.workspace = true
enum-as-inner.workspace = true
futures.workspace = true
generational-arena.workspace = true
ipnetwork.workspace = true
netlink-packet-route.workspace = true
netlink-packet-core.workspace = true
netlink-sys.workspace = true
phf.workspace = true
regex.workspace = true
rtnetlink.workspace = true
tokio.workspace = true
tracing.workspace = true
yang4.workspace = true
libc.workspace = true

holo-northbound = { path = "../holo-northbound", features = ["interface"] }
holo-protocol = { path = "../holo-protocol" }
holo-utils = { path = "../holo-utils" }
holo-yang = { path = "../holo-yang" }

holo-vrrp = { path = "../holo-vrrp", optional = true }

[build-dependencies]
yang4 = { workspace = true, features = ["bundled"] }
holo-northbound = { path = "../holo-northbound", features = ["interface"] }
holo-yang = { path = "../holo-yang" }

[lints]
workspace = true

[features]
vrrp = ["holo-vrrp"]
