[package]
name = "holo-keychain"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
chrono.workspace = true
derive-new.workspace = true
enum-as-inner.workspace = true
tokio.workspace = true
tracing.workspace = true
yang3.workspace = true

holo-northbound = { path = "../holo-northbound" }
holo-utils = { path = "../holo-utils" }
holo-yang = { path = "../holo-yang" }

[lints]
workspace = true
