[package]
name = "holo-keychain"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
chrono.workspace = true
derive-new.workspace = true
enum-as-inner.workspace = true
phf.workspace = true
tokio.workspace = true
tracing.workspace = true
yang4.workspace = true

holo-northbound = { path = "../holo-northbound", features = ["keychain"] }
holo-utils = { path = "../holo-utils" }
holo-yang = { path = "../holo-yang" }

[build-dependencies]
yang4 = { workspace = true, features = ["bundled"] }
holo-northbound = { path = "../holo-northbound", features = ["keychain"] }
holo-yang = { path = "../holo-yang" }

[lints]
workspace = true
