[package]
name = "holo-ldp"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
bitflags.workspace = true
bytes.workspace = true
chrono.workspace = true
derive-new.workspace = true
enum-as-inner.workspace = true
generational-arena.workspace = true
ipnetwork.workspace = true
libc.workspace = true
maplit.workspace = true
num-derive.workspace = true
num-traits.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
socket2.workspace = true
tokio.workspace = true
tracing.workspace = true
yang3.workspace = true

holo-northbound = { path = "../holo-northbound" }
holo-protocol = { path = "../holo-protocol" }
holo-utils = { path = "../holo-utils" }
holo-yang = { path = "../holo-yang" }

[dev-dependencies]
const-addrs.workspace = true
criterion.workspace = true
yang3 = { workspace = true, features = ["bundled"] }

holo-ldp = { path = ".", features = ["testing"] }
holo-protocol = { path = "../holo-protocol", features = ["testing"] }
holo-utils = { path = "../holo-utils", features = ["testing"] }

[lints]
workspace = true

[features]
default = []
testing = []

[[bench]]
name = "pdu_encoding"
harness = false

[[bench]]
name = "pdu_decoding"
harness = false
